# chatbot-ai-system

./: .commitlintrc.json  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  README-DOCKER.md  README.md  README_PRODUCTION.md  SECURITY.md  SHOWCASE_READY.md  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  final_fix.sh  fix_all_linting.py  fix_anthropic_mock.py  fix_imports.sh  fix_mypy_errors.py  fix_rate_limiter.py  fix_test_issues.py  mypy.ini  pyproject 2.toml  pyproject.toml  quick_fix.sh  quick_start.sh  run_all_tests.sh  setup.py  test_config.py
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  main.yml  pr-checks.yml  release.yml
api/: Dockerfile  config.py  health.py  main.py  pytest.ini  requirements.txt
api/auth/: __init__.py  jwt_handler.py  permissions.py
api/cache/: __init__.py  cache_manager.py
api/common/: middleware.py
api/database/: __init__.py
api/finops/: billing.py
api/infrastructure/: websocket_manager.py  websocket_scalable.py
api/integrations/: enterprise_platform.py
api/middleware/: tenant_middleware.py
api/models/: __init__.py  cost.py  provider.py  tenant.py  websocket.py
api/monitoring/: metrics.py  tracing.py
api/orchestration/: load_balancer.py
api/providers/: __init__.py  base.py  circuit_breaker.py  orchestrator.py
api/reliability/: circuit_breaker.py  timeout_manager.py
api/streaming/: __init__.py  reconnection.py  websocket_manager.py
api/tests/: conftest.py  test_cache.py  test_chat.py  test_functions.py  test_llm.py  test_multimodal.py
api/utils/: cost_calculator.py  token_counter.py
api/v1/: __init__.py
backend/: Dockerfile.production
benchmarks/: README.md  performance_test.py  run_all_benchmarks.py  run_batching_benchmark.py  run_benchmarks.py  run_cache_benchmark.py  run_load_test.sh
benchmarks/load/: rest_api_load.js  websocket_concurrency.js
benchmarks/load_tests/: k6_api_test.js  k6_websocket_test.js  locust_scenarios.py
benchmarks/performance/: cost_analyzer.py  latency_tracker.py
benchmarks/results/: benchmark_summary.json  cache_metrics_latest.json  failover_timing_20250828_173438.json  failover_timing_20250828_174016.json  failover_timing_20250903_165537.json  failover_timing_20250903_165652.json  failover_timing_20250904_112520.json  failover_timing_20250904_153426.json  failover_timing_20250904_153552.json  failover_timing_20250904_170448.json  failover_timing_20250904_175131.json  failover_timing_20250904_175224.json  failover_timing_20250904_180150.json  failover_timing_20250904_180240.json  failover_timing_20250904_180454.json  failover_timing_20250904_183016.json  failover_timing_20250904_191108.json  failover_timing_20250905_140300.json  failover_timing_20250905_150851.json  failover_timing_latest.json  junit_latest.xml  rest_api_latest.html  rest_api_latest.json  sample_metrics.json  throughput_metrics_latest.json  websocket_metrics_latest.json  ws_latest.html
config/: README.md
config/ci/: verify_demo_ci.sh
config/environments/: .env.example  render.yaml
config/requirements/: base.txt  dev.txt  prod.txt
demo/: showcase_demo.py  test_api.py
deploy/templates/: deployment.yaml  service.yaml
docs/: API.md  POETRY_MIGRATION.md  ci-cd-demo.md
docs/api/: openapi.yaml
docs/architecture/: ARCHITECTURE.md  design_patterns.md  message_flow.drawio
docs/guides/: BRANCH_COMPARISON.md  README_DEMO.md  README_MAIN_BRANCH.md
docs/performance/: PERFORMANCE.md  performance_baseline.md
docs/portfolio/: PORTFOLIO_SHOWCASE.md
docs/security/: SECURITY.md
examples/: demo_features.py
frontend/: .gitignore  Dockerfile  Dockerfile.demo  Dockerfile.production  README.md  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx
frontend/components/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ModelSelector.tsx
frontend/hooks/: useChat.ts  useWebSocket.ts
frontend/types/: index.ts
infrastructure/disaster-recovery/: dr_automation.py
infrastructure/terraform/: data.tf  ecs.tf  main.tf  networking.tf
monitoring/: alerting-rules.yaml  jaeger-config.yaml  prometheus-config.yaml
monitoring/grafana-dashboards/: overview.json
monitoring/observability/: custom_exporters.py  docker-compose.observability.yml  grafana-dashboards.json  prometheus-config.yml  sli-slo-config.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
redis/: redis.conf
scripts/: __init__.py  backup.sh  compatibility_bridge.sh  demo.sh  dependency_health_monitor.py  dependency_manager.py  dependency_reporter.py  dependency_visualizer.py  healthcheck.sh  migrate_to_poetry.py  production_checklist.sh  restore.sh  security_checks.py  setup.sh  start.sh  startup.sh  test.sh  test_requirements.py  validate_claims.py  validate_project.sh  verify_setup.sh
scripts/ci/: fix_structure.sh  verify_setup.sh  verify_workflow.sh
scripts/migration/: update_references.py
scripts/setup/: setup_demo.sh
scripts/utils/: manage.py  switch_version.sh
src/chatbot_ai_system/: Dockerfile  __init__.py  cli.py  config.py  exceptions.py  health.py  main.py  metrics.py  pytest.ini  requirements.txt
src/chatbot_system_api/: __init__.py  app.py
src/chatbot_system_core/: __init__.py  cli.py  config.py  orchestration.py  provider_orchestrator.py  rate_limit.py  semantic_cache.py  token_bucket.py
tests/: conftest.py  conftest_fix.py  redis_fix.py  test_api.py  test_basic.py  test_basic_working.py  test_imports_safe.py  test_provider_failover.py  test_simple.py  test_smoke.py
tests/contract/: test_placeholder.py
tests/e2e/: test_failover_scenarios.py  test_multi_tenant_flow.py  test_user_journey.py
tests/fixtures/: mock_responses.json  (+1 more)
(+257 files in other folders)
